--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,5 +30,8 @@
     "swr": "^2.2.4",
     "typescript": "5.1.3",
     "use-local-storage-state": "^19.0.4"
+  },
+  "devDependencies": {
+    "@jridgewell/sourcemap-codec": "^1.5.0"
   }
 }
