--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ tokio = { version = "1.37.0", features = ["full"] }
 futures = "0.3.31"
 reqwest = "0.12.9"
 rstest = "0.18"
+time = { version = "0.3.36", features = ["macros", "parsing", "serde"] }
