Configure the workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "rusty-book-manager"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "app"
+path = "src/bin/app.rs"
+
+[workspace]
+members = ["api", "kernel", "adapter", "shared", "registry"]
+
 [dependencies]
 anyhow = "1.0.75"
 axum = { version = "0.7.5", features = ["macros"] }
@@ -19,5 +26,5 @@ tokio = { version = "1.37.0", features = ["full"] }
 [dev-dependencies]
 futures = "0.3.31"
 reqwest = "0.12.9"
-rstest = "0.18"
+rstest = "0.18.2"
 time = { version = "0.3.36", features = ["macros", "parsing", "serde"] }
