--- a/adapter/Cargo.toml
+++ b/adapter/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow.workspace = true
+async-trait.workspace = true
+derive-new.workspace = true
+kernel.workspace = true
+shared.workspace = true
+sqlx.workspace = true
