--- a/Makefile.toml
+++ b/Makefile.toml
@@ -33,21 +33,19 @@ REDIS_PORT = "${REDIS_PORT_OUTER}"
 JAEGER_HOST = "localhost"
 JAEGER_PORT = 6831
 
-
 [tasks.before-build]
-run_task = [
-    { name = [
-        "compose-up-db",
-        "compose-up-redis",
-    ] },
-]
+run_task = [{ name = ["compose-up-db", "migrate", "compose-up-redis"] }]
 
 [tasks.compose-build-app]
 extend = "set-env-local"
 command = "docker"
 args = [
-  "compose", "build", "app",
-  "--build-arg", "BUILDKIT_INLINE_CACHE=1", "${@}"
+  "compose",
+  "build",
+  "app",
+  "--build-arg",
+  "BUILDKIT_INLINE_CACHE=1",
+  "${@}",
 ]
 
 [tasks.run]
@@ -102,12 +100,17 @@ args = ["clippy", "--all", "--all-targets", "${@}"]
 [tasks.test]
 extend = "set-env-local"
 install_crate = { crate_name = "cargo-nextest", binary = "cargo", test_arg = [
-  "nextest", "--help",
+  "nextest",
+  "--help",
 ] }
 command = "cargo"
 args = [
-  "nextest", "run", "--workspace",
-  "--status-level", "all", "--test-threads=1",
+  "nextest",
+  "run",
+  "--workspace",
+  "--status-level",
+  "all",
+  "--test-threads=1",
 ]
 
 [tasks.clippy-ci]
@@ -143,21 +146,35 @@ args = ["${@}", "--source", "adapter/migrations"]
 extend = "set-env-local"
 command = "docker"
 args = [
-  "run", "-it", "--rm",
-  "--network", "host",
-  "-v", "${PWD}:/work",
-  "postgres:15", "psql", "${DATABASE_URL}", "${@}"
+  "run",
+  "-it",
+  "--rm",
+  "--network",
+  "host",
+  "-v",
+  "${PWD}:/work",
+  "postgres:15",
+  "psql",
+  "${DATABASE_URL}",
+  "${@}",
 ]
 
 [tasks.initial-setup]
 extend = "set-env-local"
 command = "docker"
 args = [
-  "run", "-it", "--rm",
-  "--network", "host",
-  "-v", "${PWD}:/work",
-  "postgres:15", "psql", "${DATABASE_URL}",
-  "-f", "/work/data/initial_setup.sql"
+  "run",
+  "-it",
+  "--rm",
+  "--network",
+  "host",
+  "-v",
+  "${PWD}:/work",
+  "postgres:15",
+  "psql",
+  "${DATABASE_URL}",
+  "-f",
+  "/work/data/initial_setup.sql",
 ]
 
 
