--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow.workspace = true
 async-trait.workspace = true
+shared.workspace = true
+uuid.workspace = true
