--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -1,10 +1,18 @@
 [package]
 name = "kernel"
 version = "0.1.0"
-edition = "2021"
+edition.workspace = true
+license.workspace = true
+publish.workspace = true
 
 [dependencies]
 anyhow.workspace = true
 async-trait.workspace = true
+chrono.workspace = true
+derive-new.workspace = true
+mockall.workspace = true
+serde.workspace = true
 shared.workspace = true
+strum.workspace = true
+sqlx.workspace = true
 uuid.workspace = true
