Implement the logging feature and built-in the OpenAPI

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,9 @@ garde = { version = "0.18.0", features = ["derive", "email"] }
 itertools = "0.11.0"
 kernel = { path = "./kernel" }
 mockall = "0.11.4"
+opentelemetry = "0.21.0"
+opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio"] }
+opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
 redis = { version = "0.25.3", features = ["tokio-rustls-comp"] }
 registry = { path = "./registry" }
 secrecy = "0.8.0"
@@ -56,9 +59,13 @@ strum = { version = "0.26.2", features = ["derive"] }
 thiserror = "1.0.44"
 tokio = { version = "1.37.0", features = ["full"] }
 tokio-stream = "0.1.14"
-utoipa = { version = "4.1.0", features = ["axum_extras", "uuid", "chrono"] }
 tower = { version = "0.4.13", features = ["util"] }
+tower-http = { version = "0.5.0", features = ["cors", "trace"] }
 tracing = { version = "0.1.37", features = ["log"] }
+tracing-opentelemetry = "0.22.0"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
+utoipa = { version = "4.1.0", features = ["axum_extras", "uuid", "chrono"] }
+utoipa-redoc = { version = "2.0.0", features = ["axum"] }
 uuid = { version = "1.4.0", features = ["v4", "serde"] }
 
 [dependencies]
@@ -67,19 +74,33 @@ anyhow.workspace = true
 api.workspace = true
 async-trait.workspace = true
 axum.workspace = true
+axum-extra.workspace = true
+bcrypt.workspace = true
+chrono.workspace = true
 derive-new.workspace = true
-opentelemetry = "0.21.0"
-opentelemetry-jaeger = { version = "0.20.0", features = ["rt-tokio"] }
+garde.workspace = true
+itertools.workspace = true
+kernel.workspace = true
+mockall.workspace = true
+opentelemetry.workspace = true
+opentelemetry-jaeger.workspace = true
+opentelemetry_sdk.workspace = true
 registry.workspace = true
+secrecy.workspace = true
+serde.workspace = true
 shared.workspace = true
 sqlx.workspace = true
+strum.workspace = true
+thiserror.workspace = true
 tokio.workspace = true
-tower-http = { version = "0.5.0", features = ["cors", "trace"] }
+tower.workspace = true
+tower-http.workspace = true
 tracing.workspace = true
-tracing-opentelemetry = "0.22.0"
-tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
+tracing-opentelemetry.workspace = true
+tracing-subscriber.workspace = true
 utoipa.workspace = true
-utoipa-redoc = { version = "2.0.0", features = ["axum"] }
+utoipa-redoc.workspace = true
+uuid.workspace = true
 
 [dev-dependencies]
 futures = "0.3.31" # examples
@@ -89,3 +110,8 @@ time = "0.3.36"
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
