--- a/Makefile.toml
+++ b/Makefile.toml
@@ -34,7 +34,14 @@ JAEGER_HOST = "localhost"
 JAEGER_PORT = 6831
 
 [tasks.before-build]
-run_task = [{ name = ["compose-up-db", "migrate", "compose-up-redis"] }]
+run_task = [
+  { name = [
+    "compose-up-db",
+    "migrate",
+    "compose-up-redis",
+    "compose-up-jaeger",
+  ] },
+]
 
 [tasks.compose-build-app]
 extend = "set-env-local"
@@ -194,6 +201,11 @@ args = ["compose", "up", "-d", "postgres"]
 extend = "set-env-docker"
 command = "docker"
 args = ["compose", "up", "-d", "redis"]
+
+[tasks.compose-up-jaeger]
+extend = "set-env-docker"
+command = "docker"
+args = ["compose", "up", "-d", "jaeger"]
 
 [tasks.compose-down]
 extend = "set-env-docker"
